envoy/envoy.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: egress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend_grpc_service
                http_filters:
                  - name: envoy.router
                    typed_config: {}
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/dev/stdout"
  clusters:
    - name: backend_grpc_service
      type: STRICT_DNS
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: backend_grpc_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: "grpc-sample-server1", port_value: 8080 }
              - endpoint:
                  address:
                    socket_address: { address: "grpc-sample-server2", port_value: 8080 }
